adding png images, adding styling, started script.js

--- a/index.html
+++ b/index.html
@@ -76,7 +76,26 @@
             <h1>Portfolio</h1>
             <div class="block"></div>
             <div class="row">
+                
 My portfolio
+https://github.com/donnaxnguyen/planner-homework#
+planner . png
+
+https://github.com/donnaxnguyen/MiddleGround
+middleground . png
+
+https://github.com/donnaxnguyen/project-one
+spaceforce . png
+
+https://github.com/donnaxnguyen/code-quiz
+codequiz . png
+
+https://floating-springs-49667.herokuapp.com/
+notetaker . png
+
+
+
+
 <!-- add portfolio here -->
                 </div>
             </div>
