adding resume.pdf, finishing about me, changing education header to resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a class="smoothscroll" href="#header">Home</a></li>
                         <li><a class="smoothscroll" href="#about">About</a></li>
-                        <li><a class="smoothscroll" href="#education">Education</a></li>
+                        <li><a class="smoothscroll" href="#resume">Resume</a></li>
                         <li><a class="smoothscroll" href="#portfolio">Portfolio</a></li>
                         <li><a class="smoothscroll" href="#contact">Contact</a></li>
                     </ul>
@@ -49,8 +49,7 @@
             <div class="row">
                 <h1>About</h1>
                 <div class="block"></div>
-                <p>Hi I'm Donna Nguyen</p>
-                <!-- adding more info here -->
+                <p>Hello! Thank you for visiting my page. I am currently a full-stack web developer student with some experience in working with front end and back end systems. I've primarily worked with HTML, CSS, and Javascript. I'm currently a Business Adminstration major with a focus in Accounting. I have previously worked as a Retail Supervisor, Visuals Supervisor, and Stock Supervisor. Although my major and employment-background is mostly business-related, I have always been interested in coding and computer-science. My hobbies include cooking, jogging, swimming, and also exploring new foods. </p>
             </div>
         </div>
     </section>
@@ -58,16 +57,17 @@
 
 
 
-    <!-- education -->
-    <section id="education">
+    <!-- Resume -->
+    <section id="resume">
         <div class="container">
-            <h1>Education</h1>
-            My education
-            <!-- adding education here -->
+            <div class="row">
+                <div class="block"></div>
+            <h1>Resume</h1>
+            uploading resume here
+            <!-- adding resume here -->
         </div>
-
+</div>
     </section>
-    <!-- /education -->
 
 
     <!-- portfolio -->
@@ -76,7 +76,7 @@
             <h1>Portfolio</h1>
             <div class="block"></div>
             <div class="row">
-                
+
 My portfolio
 https://github.com/donnaxnguyen/planner-homework#
 planner . png
