--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- title and style sheets -->
 <head>
     <meta charset="UTF-8">
     <title>Donna Nguyen</title>
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
+<!-- adding header and links -->
 <body>
     <header id="header">
         <div class="main_nav">
@@ -31,9 +31,8 @@
             </div>
         </div>
 
-
+<!-- title and picture of myself -->
         <div class="title">
-            <!-- <div><span class="typcn typcn-heart-outline icon heading"></span></div> -->
             <div class="headshot"><img src="assets/pic.jpeg" width="250" height="300" alt=""></div>
             <div class="smallsep heading"></div>
             <h1 class="heading">Donna Nguyen</h1>
@@ -55,16 +54,14 @@
     </section>
 
 
-
-
-    <!-- Resume -->
+    <!-- resume -->
     <section id="resume">
         <div class="container">
             <div class="row">
                 <div class="block"></div>
             <h1>Resume</h1>
-            uploading resume here
-            <!-- adding resume here -->
+            <iframe src="assets/resume.pdf" width="100%" height="600px"></iframe>
+        </div>
         </div>
 </div>
     </section>
@@ -76,6 +73,9 @@
             <h1>Portfolio</h1>
             <div class="block"></div>
             <div class="row">
+                <img src="assets/codequiz.jpg" width="250" height="300" alt="">
+
+
 
 My portfolio
 https://github.com/donnaxnguyen/planner-homework#
@@ -106,32 +106,16 @@ notetaker . png
     <section id="contact">
         <div class="container">
             <h1>Contact</h1>
-            <div class="block"></div>
-            Contact me here
-            <!-- adding the contact here -->
-        </div>
-
-<!-- footer -->
-            <div class="bg-dark footer-section">
-                <div class="section">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <h5 class="text-light">Email</h5>
-                                <p class="text-white paragraph-lg font-secondary">
-                                    <a href = "mailto: donnaxnguyen2@gmail.com">donnaxnguyen2@gmail.com</a>
-
-                                </p>
-                            </div>
-
-                            <div class="col-md-4">
-                                <h5 class="text-light">Location</h5>
-                                <p class="text-white paragraph-lg font-secondary">Oakland, California, USA</p>
-                            </div>
-                        </div>
-                    </div>
+                <h5 class="text-light">Location - Oakland, CA</h5>
+                <h5 class="text-light">Phone - (510) 603 - 0633</h5>
+                <h5 class="text-light">Email - <a href = "mailto: donnaxnguyen2@gmail.com">donnaxnguyen2@gmail.com</a></h5>
+                <div class="three columns">
+                    <a href="https://github.com/donnaxnguyen"><span
+                            class="typcn typcn-social-github-circular socialIcons"></span></a>
+                    <a href="https://www.linkedin.com/in/donna-nguyen-a71854b8/"><span
+                            class="typcn typcn-social-linkedin-circular socialIcons"></span></a>
                 </div>
-            </div>
+        </div>
         </div>
     </section>
 
@@ -141,12 +125,6 @@ notetaker . png
             <div class="nine columns">
                 <p class="mb-0 text-light">Copyright ©
                 </p>
-            </div>
-            <div class="three columns">
-                <a href="https://github.com/donnaxnguyen"><span
-                        class="typcn typcn-social-github-circular socialIcons"></span></a>
-                <a href="https://www.linkedin.com/in/donna-nguyen-a71854b8/"><span
-                        class="typcn typcn-social-linkedin-circular socialIcons"></span></a>
             </div>
         </div>
     </footer>
