finishing contact, about, and resume

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <h1>About</h1>
                 <div class="block"></div>
-                <p>Hello! Thank you for visiting my page. I am currently a full-stack web developer student with some experience in working with front end and back end systems. I've primarily worked with HTML, CSS, and Javascript. I'm currently a Business Adminstration major with a focus in Accounting. I have previously worked as a Retail Supervisor, Visuals Supervisor, and Stock Supervisor. Although my major and employment-background is mostly business-related, I have always been interested in coding and computer-science. My hobbies include cooking, jogging, swimming, and also exploring new foods. </p>
+                <p>Hello! Thank you for visiting my page!</p> <p>I am currently a student at UC Berkeley's Full Stack program.</p><p>I'm also a currently pursuing a Business Adminstration major with a focus in Accounting and minoring in Computer Science.</p><p>I have previously worked as a Retail Supervisor, Visuals Supervisor, and Stock Supervisor.</p>Although my major and employment-background is mostly business-related, I have always been interested in coding :-)</p>
             </div>
         </div>
     </section>
@@ -92,11 +92,6 @@ codequiz . png
 
 https://floating-springs-49667.herokuapp.com/
 notetaker . png
-
-
-
-
-<!-- add portfolio here -->
                 </div>
             </div>
     </section>
