--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="block"></div>
             <h1>Resume</h1>
-            <iframe src="assets/resume.pdf" width="100%" height="600px"></iframe>
+            <iframe src="assets/Resume.pdf" width="100%" height="600px"></iframe>
         </div>
         </div>
 </div>
