--- a/index.html
+++ b/index.html
@@ -73,13 +73,34 @@
             <h1>Portfolio</h1>
             <div class="block"></div>
             <div class="row">
-                <img src="assets/codequiz.jpg" width="250" height="300" alt="">
+                Click the screenshots to view the application!
+                <div id="app" class="portfolio-container">
+                    <div class="portfolioImages">
+                        <a href="https://donnaxnguyen.github.io/planner-homework/">
+                            <card data-image="assets/planner.png">
+                                <h1 slot="header">Daily Planner</h1>
+                                <p slot="content">An application that logs day to day errands</p>
+                            </card>
+                        </a>
+                        <form action="https://github.com/donnaxnguyen/planner-homework">
+                            <button type="submit" class="offset" id="button">View Code</button>
+                        </form>
+                    </div>
+
+                    <div class="portfolioImages">
+                        <a href="https://donnaxnguyen.github.io/code-quiz/">
+                            <card data-image="assets/codequiz.png">
+                                <h1 slot="header">Code Quiz</h1>
+                                <p slot="content">A game that quizzes a user on cats!</p>
+                            </card>
+                        </a>
+                        <form action="https://github.com/donnaxnguyen/code-quiz">
+                            <button type="submit" class="offset" id="button">View Code</button>
+                        </form>
+                    </div>
+                </div>
 
 
-
-My portfolio
-https://github.com/donnaxnguyen/planner-homework#
-planner . png
 
 https://github.com/donnaxnguyen/MiddleGround
 middleground . png
@@ -87,8 +108,6 @@ middleground . png
 https://github.com/donnaxnguyen/project-one
 spaceforce . png
 
-https://github.com/donnaxnguyen/code-quiz
-codequiz . png
 
 https://floating-springs-49667.herokuapp.com/
 notetaker . png
