adding weather.png and finishing html

--- a/index.html
+++ b/index.html
@@ -98,19 +98,60 @@
                             <button type="submit" class="offset" id="button">View Code</button>
                         </form>
                     </div>
+
+                    <div class="portfolioImages">
+                        <a href="https://floating-springs-49667.herokuapp.com/">
+                            <card data-image="assets/notetaker.png">
+                                <h1 slot="header">Note Taker</h1>
+                                <p slot="content">An application for a user to take notes</p>
+                            </card>
+                        </a>
+                        <form action="https://github.com/donnaxnguyen/notetaker">
+                            <button type="submit" class="offset" id="button">View Code</button>
+                        </form>
+                    </div>
+
+                    <div class="portfolioImages">
+                        <a href="https://github.com/donnaxnguyen/weather-dashboard-hw">
+                            <card data-image="assets/weather.png">
+                                <h1 slot="header">Weather Dashboard</h1>
+                                <p slot="content">An application to check the weather</p>
+                            </card>
+                        </a>
+                        <form action="https://github.com/donnaxnguyen/weather-dashboard-hw">
+                            <button type="submit" class="offset" id="button">View Code</button>
+                        </form>
+                    </div>
+
+                    <div class="portfolioImages">
+                        <a href="https://hannahpsmith1.github.io/project-one/">
+                            <card data-image="assets/spaceforce.png">
+                                <h1 slot="header">SpaceForce</h1>
+                                <p slot="content">A research application about space</p>
+                            </card>
+                        </a>
+                        <form action="https://github.com/donnaxnguyen/project-one">
+                            <button type="submit" class="offset" id="button">View Code</button>
+                        </form>
+                    </div>
+
+                    <div class="portfolioImages">
+                        <a href="https://rocky-meadow-78317.herokuapp.com/">
+                            <card data-image="assets/middleground.png">
+                                <h1 slot="header">MiddleGround</h1>
+                                <p slot="content">A research application about politics</p>
+                            </card>
+                        </a>
+                        <form action="https://github.com/donnaxnguyen/MiddleGround">
+                            <button type="submit" class="offset" id="button">View Code</button>
+                        </form>
+                    </div>
+
+
                 </div>
 
 
 
-https://github.com/donnaxnguyen/MiddleGround
-middleground . png
-
-https://github.com/donnaxnguyen/project-one
-spaceforce . png
-
-
-https://floating-springs-49667.herokuapp.com/
-notetaker . png
                 </div>
             </div>
     </section>
