adding readme, adding resume link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
             <div class="row">
                 <h1>About</h1>
                 <div class="block"></div>
-                <p>Hello! Thank you for visiting my page!</p> <p>I am currently a student at UC Berkeley's Full Stack program.</p><p>I'm also a currently pursuing a Business Adminstration major with a focus in Accounting and minoring in Computer Science.</p><p>I have previously worked as a Retail Supervisor, Visuals Supervisor, and Stock Supervisor.</p>Although my major and employment-background is mostly business-related, I have always been interested in coding :-)</p>
+                <p>Hello! Thank you for visiting my page!</p> 
+                <p>I am currently a student at UC Berkeley's Full Stack program.</p>
+                <p>I'm also currently pursuing a Business Adminstration major with a focus in Accounting, and minoring in Computer Science.</p>
+                <p>I have previously worked as a Retail Supervisor, Visuals Supervisor, and Stock Supervisor.</p>
+                <p>Although my major and employment-background is mostly business-related, I have always been interested in coding :-)</p>
             </div>
         </div>
     </section>
@@ -60,6 +64,7 @@
             <div class="row">
                 <div class="block"></div>
             <h1>Resume</h1>
+            <a href="assets/Resume.pdf">Click here to open Resume in a new window!</a><p></p>
             <iframe src="assets/Resume.pdf" width="100%" height="600px"></iframe>
         </div>
         </div>
@@ -164,6 +169,7 @@
                 <h5 class="text-light">Location - Oakland, CA</h5>
                 <h5 class="text-light">Phone - (510) 603 - 0633</h5>
                 <h5 class="text-light">Email - <a href = "mailto: donnaxnguyen2@gmail.com">donnaxnguyen2@gmail.com</a></h5>
+                Click the icons below to view my GitHub and LinkedIn pages!
                 <div class="three columns">
                     <a href="https://github.com/donnaxnguyen"><span
                             class="typcn typcn-social-github-circular socialIcons"></span></a>
